samples/_failures_safe/1761243349_be7159_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9dcbe2c5.c: In function ‘main’:
./samples/SAFE/__tmp_9dcbe2c5.c:170:12: error: missing terminating " character
  170 |     printf("Comp
      |            ^~~~~
./samples/SAFE/__tmp_9dcbe2c5.c:170:5: error: expected expression at end of input
  170 |     printf("Comp
      |     ^~~~~~
./samples/SAFE/__tmp_9dcbe2c5.c:170:5: error: expected declaration or statement at end of input
